tests/ui/derive/fail_api_schema_duplicate_struct_attribute.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
#[validate(attributes(email = "email address", email = "login email"))]
struct DuplicateStructAttribute {
    #[validate(required)]
    email: String,
}

fn main() {}
